--- a/public/styles/mainstyle.css
+++ b/public/styles/mainstyle.css
@@ -954,11 +954,92 @@
 
 
 .ourSpecialitiesMarquee {
-    padding: 60px 0 0;
+    padding: 60px 30px 0;
     overflow: hidden;
 }
 
 .ourSpecialitiesMarquee .marqueeText {
+    font-family: var(--marquee-black);
+    font-size: 80px;
+    color: #A8A8A8;
+    text-transform: uppercase;
+}
+
+/*at glance*/
+.atGlanceWrap {
+    padding: 120px 0 200px;
+    background: #ECECEC;
+    position: relative;
+    border-radius: 100px 100px 0 0;
+    margin-top: -100px;
+    z-index: 1;
+}
+
+.atGlanceTopCont {
+    display: flex;
+    gap: 140px;
+}
+
+.atGlanceTopContLft>p {
+    font-size: 30px;
+    line-height: 1.5em;
+    margin-top: 50px;
+    color: #111111;
+}
+
+.atGlanceTopContLft a {
+    color: var(--blue);
+    margin-top: 40px;
+    font-size: 18px;
+    line-height: 1em;
+    display: inline-block;
+    position: relative;
+    padding-right: 30px;
+    transition: color 0.3s ease;
+}
+
+.atGlanceTopContLft a:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 20px;
+    height: 20px;
+    background-image: url('/images/icons/right-arrow-red.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.atGlanceTopContLft a:hover:after {
+    transform: translateX(3px);
+}
+
+.atGlanceTopContRght {
+    position: relative;
+    flex: 1;
+}
+
+.atGlanceTopContRght>span {
+    font-size: 620px;
+    line-height: 1em;
+    font-family: var(--medium);
+    color: #E5E5E5;
+}
+
+.atGlanceTopContRght>em {
+    position: absolute;
+    bottom: 100px;
+    right: 0;
+}
+
+.atGlanceMarquee {
+    padding: 60px 30px 0;
+    overflow: hidden;
+}
+
+.atGlanceMarquee .marqueeText {
     font-family: var(--marquee-black);
     font-size: 80px;
     color: #A8A8A8;
